<resources>
    <string name="app_name">SuperheroesWiki</string>
    <string name="hero_name_text">hero_name</string>
    <string name="title_activity_hero_detail">HeroDetailActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="place_of_birth_text">Место рождения:</string>
    <string name="full_name_text">Полное имя:</string>
    <string name="publisher_text">Издатель:</string>
    <string name="gender_text">Пол:</string>
    <string name="race_text">Раса:</string>
    <string name="full_name_hero_info">full_name_hero_text</string>
    <string name="gender_info">gender_info</string>
    <string name="race_info">race_info</string>
    <string name="place_of_birth_info">place_of_birth_info</string>
    <string name="publisher_info">publisher_info</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_dev">Eugene</string>
    <string name="tg_link">https://t.me/EvgeshaOG</string>
    <string name="date_of_create">17.06.2022</string>
</resources>